test/Fail/Issue3285.err
Issue3285.agda:7.14: error: [ParseError]
Malformed syntax declaration: syntax cannot be a single hole
